it works i can hardly believe it

--- a/index.html
+++ b/index.html
@@ -8,23 +8,14 @@
     </head>
     <body>
         <main>
-        	<div>
-        		<nav class="row box">
-      		<div class="nav-wrapper">
-        		<ul id="nav-mobile" class="left nav__links">
-        			<li>My Family Members</li>
-          			<li><a href="#" title="">View Family Members</a></li>
-          			<li id="add-song"><a href="#" title="">Add Family</a></li>
-       			</ul>
-      		</div>
-    			</nav>
+      		<div class="row"><h1>My Family Members</h1></div>
     <div class="uiContainer row container">
       <section class="uiContainer--wrapper col s4" id="list-family">
       </section>
       <section class="col s6" id="add-family">
       <div class="row">
     	<form class="col s6">
-     	 <div class="row">
+     	 <div class="row inputform">
           	<input placeholder="Enter Name" id="name" type="text" class="validate">
           	<label for="name">Name</label>
           	<input placeholder="Enter Age" id="age" type="text" class="validate">
@@ -40,14 +31,14 @@
           	<textarea placeholder="Enter Skill" id="skills4" class="materialize-textarea"></textarea>
           	<label for="skills4">Skills</label>
           	<br>
-          	<a class="waves-effect waves-light btn" id="submit">Submit</a>
+          	<a class="waves-effect waves-light btn submit-btn" id="submit">Submit</a>
         </div>
       </div>
       </section>
     </div>
         </main>
 		<script type="text/javascript" src="dist/app.js"></script>
-<footer class="kfooter"><p>&copy; 2017 Kathleen Weisensel</p></footer>
+<footer class="container footer-copyright kfooter">&copy; 2017 Kathleen Weisensel</footer>
 
 </body>
 </html>
